# prada

./: LICENSE  README.md  pyproject.toml  setup.py
src/data_and_trees/: __init__.py  classification.py  dataset.py  openml.py  other.py  regression.py  regression_to_classification.py  special.py  uci_mlr.py
src/prada/: __init__.py  blocksworld.py  dataset.py  libsvm.py  openml.py  other.py  uci_mlr.py
