[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prada"
version = "0.2.0"
authors = [
  { name="Laurens Devos" },
]
description = "PraDA: a fine selection of PRActical tabular DAtasets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn >= 1.4",
    "numpy >= 1.26",
    "pandas >= 2.0",
]
